feat: add monaco demo and vine inject syntaxes

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
   <meta name="description" content="Vue Vine Template">
 </head>
 <body class="font-sans dark:text-white dark:bg-hex-121212">
+  <div id="loadingSpinner" class="w-100vw h-100vh absolute top-0 left-0 z-1 bg-white dark:bg-hex-121212 row-flex justify-center text-3xl">
+    Loading sandbox ...
+  </div>
   <div id="app"></div>
   <noscript>
     <div>Please enable JavaScript to use this application.</div>
